--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,67 @@
+body
+{
+    margin: 0;
+}
+header
+{
+    background-color: #950c0c;
+    padding: 10px;
+}
+h1, h2
+{
+    color: #fff;
+    margin: 0;
+}
+section
+{
+    background-color: antiquewhite;
+    display: flex;
+    justify-content: center;
+    padding: 50px 0px;
+}
 fieldset
 {
     display: flex;
     flex-direction: column;   
     justify-content: center;
     align-items: center;
+    border: 5px #950c0c solid;
+    font-size: 20px;
+    padding: 50px;
 }
+#list-error
+{
+    color: grey;
+    border: 1px solid #950c0c;
+    padding: 10px;
+    list-style: none;
+}
+input
+{
+    border: none;
+    margin: 10px 0px;
+    padding: 15px;
+}
+button
+{
+    font-size: 20px;
+    width: 85%;
+    background-color: #950c0c;
+    border: 1px #950c0c solid;
+    color: #fff;
+    padding: 15px;
+    margin: 15px;
+}
+button:hover
+{
+    background-color: #fff;
+    color: #950c0c;
+    border: 1px #950c0c solid;
+}
+footer
+{
+    text-align: center;
+    padding: 10px;
+    background-color: #950c0c;
+}
+
